[package]
name = "envoy-control-plane"
version = "0.4.0"
license = "Apache-2.0"
edition = "2021"
build = "build.rs"
description = "Envoy xDS v3 APIs"
repository = "https://github.com/bpowers/rust-envoy-control-plane"

[dependencies]
prost = "0.9"
prost-wkt-types = { version = "0.3", optional = true }
tonic = { version = "0.6", default-features = false, optional = true }
pbjson-any = { version = "0.2", optional = true }
pbjson-types-any = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
typetag = { version = "0.1", optional = true }

[build-dependencies]
prost-build = "0.9"
tonic-build = { version = "0.6", optional = true }
pbjson-build-any = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
grpc = ["tonic/async-trait", "tonic/codegen", "tonic/prost", "tonic/transport", "tonic-build"]
json = ["pbjson-any", "pbjson-build-any", "pbjson-types-any", "prost-wkt-types", "serde", "typetag"]
default = ["grpc", "json"]
